--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,28 +8,33 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" />
         <activity
             android:name=".SplashActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_splash"
-            android:theme="@style/FullscreenTheme"></activity>
+            android:theme="@style/FullscreenTheme">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
+        <activity android:name=".MainActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".PerfilActivity" />
         <activity android:name=".RegistroActivity" />
-        <activity android:name=".FragmentexActivity">
-
-        </activity>
         <activity
-            android:name=".LugaresActivity"
-            android:label="@string/title_activity_lugares"
-            android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-          </activity>
+            android:name=".HotelesActivity"
+            android:label="@string/title_activity_hoteles"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".RestsActivity"
+            android:label="@string/title_activity_rests"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".QhActivity"
+            android:label="@string/title_activity_qh"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
