--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,17 +20,18 @@
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:theme="@style/FullscreenTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity android:name=".LoginActivity" />
         <activity android:name=".RegistroActivity" />
         <activity
             android:name=".HotelesActivityD"
             android:label="@string/title_activity_hoteles_d"
-            android:theme="@style/AppTheme.NoActionBar" >
-
-            </activity>
-
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".RestActivityD"
             android:label="@string/title_activity_rest_d"
@@ -62,16 +63,9 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
-
         <activity
             android:name=".MapsActivity"
-            android:label="@string/title_activity_maps">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:label="@string/title_activity_maps"/>
     </application>
 
 </manifest>
